# bscore-rs

./: Cargo.toml  README.md
etc/: scores.txt
src/: bgame.rs  lib.rs
