[package]
name = "bscore"
version = "1.0.1" # change with html_root_url in lib.rs
edition = "2021"
authors = ["nomissbowling <nomissbowling@yahoo.co.jp>"]

description = "bowling score library for Rust"
keywords = ["bowling", "score", "bscore"]
categories = ["game-development", "game-engines", "games"]
license = "MIT"

documentation = "https://docs.rs/bscore/"
homepage = "https://crates.io/crates/bscore"
repository = "https://github.com/nomissbowling/bscore-rs"

readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
